--- a/src/DeskPlugin/Desk/Desk.csproj
+++ b/src/DeskPlugin/Desk/Desk.csproj
@@ -106,6 +106,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Dictionaries\TextBoxStylesDictionary.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\UserControls\ParameterControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\UserControls\ParameterGroupControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -125,6 +133,9 @@
     <Compile Include="Behaviors\ShowWindowMenuBehavior.cs" />
     <Compile Include="Converters\LegTypeToImageSourceConverter.cs" />
     <Compile Include="Extensions\DependencyObjectExtension.cs" />
+    <Compile Include="Views\UserControls\ParameterControl.xaml.cs">
+      <DependentUpon>ParameterControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserControls\ParameterGroupControl.xaml.cs">
       <DependentUpon>ParameterGroupControl.xaml</DependentUpon>
     </Compile>
