--- a/src/DeskPlugin/DeskParameters/DeskParameters.csproj
+++ b/src/DeskPlugin/DeskParameters/DeskParameters.csproj
@@ -79,7 +79,11 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\Extensions\LegTypeExtension.cs" />
+    <Compile Include="Enums\Extensions\ParameterTypeExtension.cs" />
     <Compile Include="Enums\LegType.cs" />
+    <Compile Include="Enums\ParameterGroupType.cs" />
+    <Compile Include="Enums\ParameterType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\CommunityToolkit.Mvvm.8.0.0\build\netstandard2.0\CommunityToolkit.Mvvm.targets" Condition="Exists('..\packages\CommunityToolkit.Mvvm.8.0.0\build\netstandard2.0\CommunityToolkit.Mvvm.targets')" />
