--- a/src/DeskPlugin/DeskParameters/DeskParameters.csproj
+++ b/src/DeskPlugin/DeskParameters/DeskParameters.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Enums\ParameterType.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="ParameterGroup.cs" />
+    <Compile Include="Parameters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\CommunityToolkit.Mvvm.8.0.0\build\netstandard2.0\CommunityToolkit.Mvvm.targets" Condition="Exists('..\packages\CommunityToolkit.Mvvm.8.0.0\build\netstandard2.0\CommunityToolkit.Mvvm.targets')" />
