feature(AutoCadConnector): добавлен класс для взаимодействия с AutoCAD

--- a/src/DeskPlugin/AutoCadConnector/AutoCadConnector.csproj
+++ b/src/DeskPlugin/AutoCadConnector/AutoCadConnector.csproj
@@ -32,6 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AcCoreMgd">
+      <HintPath>..\Libraries\AcCoreMgd.dll</HintPath>
+    </Reference>
+    <Reference Include="AcDbMgd">
+      <HintPath>..\Libraries\AcDbMgd.dll</HintPath>
+    </Reference>
+    <Reference Include="AcMgd">
+      <HintPath>..\Libraries\AcMgd.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -50,6 +59,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Connector.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Desk\Desk.csproj">
+      <Project>{73ecbb3b-0f72-43df-8c96-9b6c2f37a8dc}</Project>
+      <Name>Desk</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
