fix(DeskPlugin): рефакторинг

--- a/src/DeskPlugin/Connector/Connector.csproj
+++ b/src/DeskPlugin/Connector/Connector.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{61B4FF82-5072-49B9-9666-E40DEE3AD1AF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AutoCadConnector</RootNamespace>
-    <AssemblyName>AutoCadConnector</AssemblyName>
+    <RootNamespace>Connector</RootNamespace>
+    <AssemblyName>Connector</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -61,7 +61,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connector.cs" />
+    <Compile Include="AutoCadConnector.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Desk\Desk.csproj">
