--- a/src/DeskPlugin/Builder/Builder.csproj
+++ b/src/DeskPlugin/Builder/Builder.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0EC9A5FF-AE96-455B-8F02-2E629DB57D48}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DeskBuilder</RootNamespace>
-    <AssemblyName>DeskBuilder</AssemblyName>
+    <RootNamespace>Builder</RootNamespace>
+    <AssemblyName>Builder</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -60,12 +60,12 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder.cs" />
+    <Compile Include="DeskBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DeskParameters\DeskParameters.csproj">
+    <ProjectReference Include="..\Parameters\Parameters.csproj">
       <Project>{237249ef-409d-4697-ba53-46c6ed457d09}</Project>
-      <Name>DeskParameters</Name>
+      <Name>Parameters</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
