--- a/src/DeskPlugin/Desk/Desk.csproj
+++ b/src/DeskPlugin/Desk/Desk.csproj
@@ -179,13 +179,13 @@
     <Resource Include="Resources\DeskWithSquareLegs.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DeskParameters\DeskParameters.csproj">
+    <ProjectReference Include="..\Parameters\Parameters.csproj">
       <Project>{237249ef-409d-4697-ba53-46c6ed457d09}</Project>
-      <Name>DeskParameters</Name>
+      <Name>Parameters</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DeskViewModel\DeskViewModel.csproj">
+    <ProjectReference Include="..\ViewModel\ViewModel.csproj">
       <Project>{246e1ec6-1ed9-47d1-9a5e-c45d4295f6da}</Project>
-      <Name>DeskViewModel</Name>
+      <Name>ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
