--- a/src/DeskPlugin/ViewModel/ViewModel.csproj
+++ b/src/DeskPlugin/ViewModel/ViewModel.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{246E1EC6-1ED9-47D1-9A5E-C45D4295F6DA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DeskViewModel</RootNamespace>
-    <AssemblyName>DeskViewModel</AssemblyName>
+    <RootNamespace>ViewModel</RootNamespace>
+    <AssemblyName>ViewModel</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -76,13 +76,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DeskParameters\DeskParameters.csproj">
+    <ProjectReference Include="..\Parameters\Parameters.csproj">
       <Project>{237249ef-409d-4697-ba53-46c6ed457d09}</Project>
-      <Name>DeskParameters</Name>
+      <Name>Parameters</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DeskBuilder\DeskBuilder.csproj">
+    <ProjectReference Include="..\Builder\Builder.csproj">
       <Project>{0ec9a5ff-ae96-455b-8f02-2e629db57d48}</Project>
-      <Name>DeskBuilder</Name>
+      <Name>Builder</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
