--- a/src/DeskPlugin/Testing/TestViewModel/TestViewModel.csproj
+++ b/src/DeskPlugin/Testing/TestViewModel/TestViewModel.csproj
@@ -7,9 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.0-alpha-net7.4" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0-preview-20220726-02"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0-preview-20220726-02" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Parameters\Parameters.csproj" />
+    <ProjectReference Include="..\..\ViewModel\ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
