--- a/src/DeskPlugin/Builder/Builder.csproj
+++ b/src/DeskPlugin/Builder/Builder.csproj
@@ -44,6 +44,7 @@
     <Reference Include="CommunityToolkit.Mvvm">
       <HintPath>..\packages\CommunityToolkit.Mvvm.8.0.0\lib\netstandard2.0\CommunityToolkit.Mvvm.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,6 +67,10 @@
     <ProjectReference Include="..\Parameters\Parameters.csproj">
       <Project>{237249ef-409d-4697-ba53-46c6ed457d09}</Project>
       <Name>Parameters</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{c5aceb46-8b3f-4d15-a2eb-ad9b5a4bd71d}</Project>
+      <Name>Services</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
