feature(Desk): добавление инверсии управления/внедрения зависимостей

--- a/src/DeskPlugin/Desk/packages.config
+++ b/src/DeskPlugin/Desk/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CommunityToolkit.Mvvm" version="8.0.0" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0-rc.1.22426.10" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.1" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net481" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="6.0.0-preview.4.21253.7" targetFramework="net481" />
