--- a/src/DeskPlugin/Parameters/Parameters.csproj
+++ b/src/DeskPlugin/Parameters/Parameters.csproj
@@ -87,6 +87,12 @@
     <Compile Include="DeskParameter.cs" />
     <Compile Include="DeskParameters.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{C5ACEB46-8B3F-4D15-A2EB-AD9B5A4BD71D}</Project>
+      <Name>Services</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\CommunityToolkit.Mvvm.8.0.0\build\netstandard2.0\CommunityToolkit.Mvvm.targets" Condition="Exists('..\packages\CommunityToolkit.Mvvm.8.0.0\build\netstandard2.0\CommunityToolkit.Mvvm.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
