feature(Testing): добавление класса модульных тестов для регистратора моделей представления + рефакторинг

--- a/src/DeskPlugin/Testing/TestViewModel/TestViewModel.csproj
+++ b/src/DeskPlugin/Testing/TestViewModel/TestViewModel.csproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.0-alpha-net7.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0-preview-20220726-02" />
+    <PackageReference Include="RhinoMocks" Version="3.6.1" />
   </ItemGroup>
 
   <ItemGroup>
