fix(ViewModel): переименован проект

--- a/src/DeskPlugin/Testing/TestViewModel/TestViewModel.csproj
+++ b/src/DeskPlugin/Testing/TestViewModel/TestViewModel.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Parameters\Parameters.csproj" />
-    <ProjectReference Include="..\..\ViewModel\ViewModel.csproj" />
+    <ProjectReference Include="..\..\ViewModel\ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
