--- a/src/DeskPlugin/ViewModel/ViewModels.csproj
+++ b/src/DeskPlugin/ViewModel/ViewModels.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{246E1EC6-1ED9-47D1-9A5E-C45D4295F6DA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ViewModel</RootNamespace>
-    <AssemblyName>ViewModel</AssemblyName>
+    <RootNamespace>ViewModels</RootNamespace>
+    <AssemblyName>ViewModels</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
