--- a/src/DeskPlugin/Testing/TestViewModels/TestViewModels.csproj
+++ b/src/DeskPlugin/Testing/TestViewModels/TestViewModels.csproj
@@ -17,7 +17,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Parameters\Parameters.csproj" />
+    <ProjectReference Include="..\..\Wrappers\Wrappers.csproj" />
     <ProjectReference Include="..\..\ViewModels\ViewModels.csproj" />
+    <ProjectReference Include="..\..\Wrappers\Wrappers.csproj" />
   </ItemGroup>
 
 </Project>
