--- a/src/DeskPlugin/Connector/Connector.csproj
+++ b/src/DeskPlugin/Connector/Connector.csproj
@@ -80,9 +80,21 @@
     <Compile Include="AutoCadConnector.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Builder\Builder.csproj">
+      <Project>{0EC9A5FF-AE96-455B-8F02-2E629DB57D48}</Project>
+      <Name>Builder</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Desk\Desk.csproj">
       <Project>{73ecbb3b-0f72-43df-8c96-9b6c2f37a8dc}</Project>
       <Name>Desk</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Parameters\Parameters.csproj">
+      <Project>{237249EF-409D-4697-BA53-46C6ED457D09}</Project>
+      <Name>Parameters</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Wrappers\Wrappers.csproj">
+      <Project>{C5ACEB46-8B3F-4D15-A2EB-AD9B5A4BD71D}</Project>
+      <Name>Wrappers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
